# research-1

./: architecture.md  pyproject.toml
research_1/: agent.py  ai_agent.py  architecture.md
research_1/agents/: ai_agent.py
