[tool.poetry]
name = "research-1"
version = "0.1.0"
description = ""
authors = ["Jacob Valdez <jacobfv123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
transformers = "^4.43.3"
torch = "^2.4.0"
sqlmodel = "^0.0.21"
pgvector = "^0.3.2"
pydantic = "^2.8.2"
instructor = "^1.3.7"
openai = "^1.37.1"
anthropic = "^0.31.2"
scipy = "^1.14.0"
sqlalchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
